css fixes (#23)
Fixing the unnecessary display of a horizontal scrollbar.
Fixing the alignment of multiline links to the next article in a series.

--- a/wwwroot/css/article.css
+++ b/wwwroot/css/article.css
@@ -287,6 +287,7 @@ div.footnotes small {
     .post__end-nav-next strong {
         float: right;
         display: block;
+        text-align: end;
     }
 
     .post__end-nav-next .post__end-nav-circle {
